[project]
name = "hass-yeelightbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak-retry-connector>=3.6.0",
    "bleak>=0.22.3",
]

[dependency-groups]
dev = [
    "homeassistant>=2023.7.3",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
